Retrieving recipes ID's from API by ingredients developed. Displaying title and dish photo in a recycler view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MyFridge</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="api_key">6900134875c64b3ab5681e1e222064f7</string>>
     <string-array name="categories">
         <item>--------</item>
         <item>Dairy</item>
